unit test for special char & space in username, changing layout in map page (#52)
* tested special character&space in username and added header as style

* changed header in map page

* changing layout in map page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div class="slideshow">
+            <div id="header">FIND YOUR STARBUCKS</div>
             <div id="bg1" class="bg" style='background-image: url("bgImg/bg1.jpg'); display:"></div>
             <div id="bg2" class="bg" style='background-image: url("bgImg/bg2.jpg');"></div>
             <div id="bg3" class="bg" style='background-image: url("bgImg/bg3.jpg');"></div>
