Added cancel button to Create Account prompt (#53)

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -30,15 +30,16 @@
                 <button type="account" id='create'>Create Account</button>
             </div>
         <div id="createacc">
-        <form action='/home' method='post'>
-            <input class='inputs' type="text" name="NewUser" id='newuser' placeholder="enter desired username">
-            <br><br>
-            <input class='inputs' type="password" name="NewPassword" id='newpw' placeholder="enter password">
-            <br><br>
-            <input class='inputs' type="password" name="confirmp" id='confirmpw' placeholder="confirm password">
-            <br><br>
-            <input type="submit" value="Submit" id='submitbutton'>
-        </form>
+            <form action='/home' method='post'>
+                <input class='inputs' type="text" name="NewUser" id='newuser' placeholder="enter desired username">
+                <br><br>
+                <input class='inputs' type="password" name="NewPassword" id='newpw' placeholder="enter password">
+                <br><br>
+                <input class='inputs' type="password" name="confirmp" id='confirmpw' placeholder="confirm password">
+                <br><br>
+                <input type="submit" value="Submit" id='submitbutton'>
+            </form>
+            <button id="cancelBtn">Cancel</button>
         </div>
     </div>
 
