--- a/views/index2.hbs
+++ b/views/index2.hbs
@@ -12,16 +12,19 @@
 <body id="body2">
     <div id="header2"></div>
     <form action="/favdata" method='post'>
-        <input type='submit' onclick="savelocation()" value="Save to Favorites" id='savecurrentloc'>
+        <div id="map">
+            <input type='submit' onclick="savelocation()" value="Save to Favorites" id='savecurrentloc'>
+            <div id='newmap'></div>
+        </div>
     </form>
-    <input type="submit" value="Search" id='Searchlocation'>
+    <input type="submit" value="Go back to Search" id='Searchlocation'>
 
     <input type="submit" onclick="showfavs()" value="Favorites" id='savedlocations'>
-    <div id='newmap'></div>
+    <!---<div id='newmap'></div> !-->
     <div id="nearme">
         <div id="searchbox">
             <form action='/loginsearch' method='post'>
-                <input type="submit" value="Go" id='go'>
+                <input type="submit" value="Search" id='go'>
                 <input type="text" name="search" id="search">
             </form>
         </div>
@@ -31,7 +34,9 @@
         <div id="searchbox">Saved Locations   <button id="edit">Edit</button></div>
         {{{savedSpots}}}
     </div>
+    <!---
     <button onclick="getLocation()" id='sbucksnearme'>Try It</button>
+    !-->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="i2.js"></script>
     <script>errorMessages({{error}})</script>
