--- a/views/style.css
+++ b/views/style.css
@@ -16,7 +16,7 @@
     position: fixed;
     top:0;left:0;
     width:100%;
-    height:6%;
+    height:7%;
     color:white;
     font-weight: lighter;
     font-size:19px;
@@ -24,6 +24,7 @@
     font-family:'Segoe UI';
     background-color: rgba(0,0,0,0.4);
     padding-left:10px;
+    z-index: -1;
 }
 
 
@@ -57,6 +58,11 @@
 
 body{
     margin: 0;
+}
+
+#body2{
+    background-image: url('body2.png');
+    font-family:'Segoe UI';
 }
 
 #loginbox{
@@ -193,6 +199,7 @@ form {
     right:0;
     cursor: pointer;
 }
+
 #savedlocation{
     bottom:0px;
     position: absolute;
@@ -219,23 +226,28 @@ form {
 #searchbox {
     position: relative;
     background-color: rgba(255,255,255,.85);
-    box-sizing: border-box;
+    border:1px solid #aaa;
     width: 100%;
-    height: 48px;
-    padding: 11px;
+    height: 6%;
+    padding:5px;
     transition-property: background,box-shadow;
     transition-duration: 0.3s;
     text-align:center;
 }
 #search{
     position: absolute;
+    top:20%;
     left:5%;
-    width:70%;
+    width:65%;
+    line-height: 20px;
+    font-family:'Segoe UI';
 }
 #go{
-    height:60%;
+    top:20%;
     width:20%;
-    top:10%; right:2%;
+    height:26px;
+    right:7%;
+    line-height: 20px;
     position: absolute;
     background:#00704a;
     color:white;
@@ -243,7 +255,7 @@ form {
     border-style: outset;
     border-color:#00704a;
     text-shadow: none;
-    display:inline-block;
+    font-family:'Segoe UI';
 }
 #loginbox1{
     height:40%;
@@ -287,19 +299,6 @@ form {
     top:21px;
     left:0px;
 }
-#newmap{
-    position: absolute;
-    height:70%;
-    width:50%;
-    top:-20%;
-    bottom:0px;
-    margin:auto;
-    left:38%;
-    background-color: black;
-    border-radius: 5px;
-    border: ridge rgba(0, 112, 74, 1) 6px;
-    box-shadow: 2px 2px 10px rgba(0,0,0,.5);
-}
 
 #createacc{
     position: absolute;
@@ -338,16 +337,50 @@ form {
     top:21px;
     left:0px;
 }
+
+/*button:Go back to Search*/
 #Searchlocation{
     position: fixed;
-    bottom:0px;
-    left:0px;
+    top:2%;
+    right:1%;
+    font-size:15px;
+    border:none;
+    background:transparent;
+    color:white;
 }
+
+/*button:favorite in map page*/
 #savedlocations{
     position: fixed;
-    bottom:0px;
-    left:7%;
+    top:2%;
+    right:13%;
+    z-index: 999;
+    font-size:15px;
+    outline:none;
+    border:none;
+    background:transparent;
+    color:white;
+
 }
+
+#savedlocations::after{
+    position:absolute;
+    bottom:-5px;
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #333;
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s;
+}
+
+#savedlocations:hover::after{
+    bottom:-2.5px;
+    opacity:1;
+    visibility:visible;
+}
+
 #savedloc{
     top:0%;
     left:0px;
@@ -361,11 +394,37 @@ form {
     font-size:17px;
     font-family: Verdana, Geneva, sans-serif;
 }
+
+#map {
+    top:10%;
+    position: fixed;
+    height:80%;
+    right:8%;
+    width:55%;
+    text-align:center;
+}
+
+#newmap{
+    position: absolute;
+    height:80%;
+    width:80%;
+    top:0;bottom:0;right:0;left:0;
+    margin:auto;
+    background-color: black;
+    box-shadow: 2px 2px 10px rgba(0,0,0,.5);
+}
+
+/*button: Save to Favorite*/
 #savecurrentloc{
     position: absolute;
-    bottom:15%;
-    right:34%;
-
+    height:5%;
+    width:20%;
+    bottom:0;right:0;left:0;
+    margin:auto;
+    z-index: 999;
+    text-align: center;
+    font-family:'Segoe UI';
+    font-size:15px;
 }
 
 #nearme{
@@ -397,4 +456,3 @@ form {
     bottom:0px;
     right:0px;
 }
-
