--- a/views/style.css
+++ b/views/style.css
@@ -27,8 +27,6 @@
     z-index: -1;
 }
 
-
-
 .bg {
     position: absolute;
     width:100%;
@@ -74,11 +72,10 @@ body{
     margin:auto;
     top:0px;
     bottom:0px;
-    /*border: 2px solid black;*/
     box-shadow: 2px 2px 10px rgba(0,0,0,.5);
-    /*border-radius: 5px;*/
     background-color: rgba(255,255,255,.80);
 }
+
 #logintitle{
     text-align: center;
     vertical-align: middle;
@@ -87,6 +84,7 @@ body{
     font-weight: bold;
     font-family:'Segoe UI';
 }
+
 #starbucks{
     position: absolute;
     height:20%;
@@ -94,8 +92,8 @@ body{
     left:0px;
     right:0px;
     margin:auto;
-    /*border-radius: 40%;*/
 }
+
 #loginout{
     position: absolute;
     height:40%;
@@ -195,6 +193,7 @@ form {
     background-color: white;
     display:block;
 }
+
 #x{
     height:5%;
     width:3%;
@@ -213,6 +212,7 @@ form {
     position: absolute;
     left:10%;
 }
+
 #mainpage2{
     position: absolute;
     height:90%;
@@ -222,11 +222,12 @@ form {
     left:0px;
     right:0px;
     top:0px;
-    bottom:0px; 
+    bottom:0px;
     margin:auto;
     background-color: white;
     display:none;
 }
+
 #searchbox {
     position: relative;
     background-color: rgba(255,255,255,.85);
@@ -246,20 +247,36 @@ form {
     line-height: 20px;
     font-family:'Segoe UI';
 }
+
 #go{
     height:60%;
     width:20%;
+
     top:10%; right:2%;
     position: absolute;
-    background:#00704a;
-    color:white;
     padding:0;
-    border-style: outset;
-    border-color:#00704a;
     text-shadow: none;
     font-family:'Segoe UI';
+    font-weight: normal;
     display:inline-block;
+    border:none;
+    outline:none;
+    color:green;
+    background-color:#ECECEC;
+    margin-bottom:10px;
+    transition: 0.5s;
+    font-size:17px;
+    background-color: transparent;
+    border:1px solid green;
 }
+
+#go:active {
+    -ms-transform:translateY(3px);
+    -webkit-transform:translateY(3px);
+    transform:translateY(3px);
+    border-bottom:none;
+}
+
 #loginbox1{
     height:40%;
     width:30%;
@@ -341,47 +358,84 @@ form {
     left:0px;
 }
 
-/*button:Go back to Search*/
-#Searchlocation{
-    position: fixed;
-    top:2%;
-    right:1%;
-    font-size:15px;
-    border:none;
-    background:transparent;
-    color:white;
-}
-
-/*button:favorite in map page*/
-#savedlocations{
-    position: fixed;
-    top:2%;
-    right:13%;
-    z-index: 999;
-    font-size:15px;
+/*input-submit:Back to Search*/
+/*input-submit:Favorite*/
+#savedlocations, #Searchlocation {
     outline:none;
     border:none;
     background:transparent;
     color:white;
-
+    font-size: 18px;
+    font-family: 'Segoe UI';
+    font-weight: lighter;
 }
 
-#savedlocations::after{
-    position:absolute;
-    bottom:-5px;
+
+
+ul {
+    font-size: 0;
+    float: right;
+    box-sizing: border-box;
+    width:40%;
+    padding:4px;
+    list-style: none;
+    text-align: center;
+    z-index: 999;
+    margin:0;
+}
+
+li {
+    font-size: 20px;
+    margin:0 8px;
+    display:inline-block;
+    z-index: 999;
+    float:right;
+}
+
+li a {
+    text-decoration: none;
+    padding-bottom: 3px;
+    color:#000;
+    display: block;
+    position: relative;
+    z-index: 999;
+    float:right;
+}
+
+li a:before {
     content: '';
-    width: 100%;
-    height: 2px;
-    background: #333;
-    opacity: 0;
-    visibility: hidden;
-    transition: .3s;
+    width: 0;
+    left: 50%;
+    bottom: 0;
+    transition: all 0.3s ease;
+    border-bottom: 2px solid #000;
+    position: absolute;
+    display: block;
+    z-index: 999;
 }
 
-#savedlocations:hover::after{
-    bottom:-2.5px;
-    opacity:1;
-    visibility:visible;
+li a:hover:before {
+    width: 50%;
+    border-bottom: 2px solid #FFF;
+    z-index: 999;
+}
+
+ li a:after {
+    content: '';
+    width: 0;
+    right: 50%;
+    bottom: 0;
+    transition: all 0.3s ease;
+    border-bottom: 2px solid #FFF;
+    position: absolute;
+    display: block;
+    z-index: 999;
+}
+
+li a:hover:after {
+    width: 50%;
+    border-bottom: 2px solid #FFF;
+    z-index: 999;
 }
 
 #savedloc{
@@ -419,15 +473,31 @@ form {
 
 /*button: Save to Favorite*/
 #savecurrentloc{
+    display: inline-block;
+    background-color: transparent;
+    border:1px solid rgba(60,179,113,1);
     position: absolute;
-    height:5%;
     width:20%;
+    height:7%;
+    color:rgba(60,179,113, 1) ;
     bottom:0;right:0;left:0;
     margin:auto;
     z-index: 999;
     text-align: center;
     font-family:'Segoe UI';
-    font-size:15px;
+    font-size:17px;
+    background-size: 300% 200%;
+    background-image: linear-gradient(to right, transparent 50%, rgba(60,179,113, 1) 50%);
+    transition: background-position .3s cubic-bezier(0.19, 1, 0.22, 1) .1s, color .5s ease 0s, background-color .5s ease;
+}
+
+#savecurrentloc:hover {
+    color:white;
+    background-color: rgba(60,179,113,1);
+    background-position: -200% 200%;
+    z-index: 999;
+    font-family:'Segoe UI';
+
 }
 
 #nearme{
