--- a/views/style.css
+++ b/views/style.css
@@ -2,10 +2,10 @@
     position: fixed;
     top:0;left:0;
     width:100%;
-    height:6%;
+    height:7%;
     color:white;
     font-weight: lighter;
-    font-size:19px;
+    font-size:18px;
     z-index: 999;
     font-family:'Segoe UI';
     background-color: rgba(0,0,0,0.4);
@@ -19,10 +19,10 @@
     height:7%;
     color:white;
     font-weight: lighter;
-    font-size:19px;
+    font-size:18px;
     z-index: 999;
     font-family:'Segoe UI';
-    background-color: rgba(0,0,0,0.4);
+    background-color: black;
     padding-left:10px;
     z-index: -1;
 }
@@ -59,8 +59,8 @@ body{
 }
 
 #body2{
-    background-image: url('body2.png');
     font-family:'Segoe UI';
+    background: white;
 }
 
 #loginbox{
@@ -231,13 +231,13 @@ form {
 #searchbox {
     position: relative;
     background-color: rgba(255,255,255,.85);
-    border:1px solid #aaa;
-    width: 100%;
+    width: 95%;
     height: 6%;
     padding:5px;
     transition-property: background,box-shadow;
     transition-duration: 0.3s;
     text-align:center;
+    background:transparent;
 }
 #search{
     position: absolute;
@@ -251,10 +251,12 @@ form {
 #go{
     height:60%;
     width:20%;
-
-    top:10%; right:2%;
+    position: absolute;
+    right:0;
+    top:10%;
     position: absolute;
     padding:0;
+    margin:5px;
     text-shadow: none;
     font-family:'Segoe UI';
     font-weight: normal;
@@ -365,7 +367,7 @@ form {
     border:none;
     background:transparent;
     color:white;
-    font-size: 18px;
+    font-size: 15px;
     font-family: 'Segoe UI';
     font-weight: lighter;
 }
@@ -374,7 +376,7 @@ form {
 
 ul {
     font-size: 0;
-    float: right;
+    float: left;
     box-sizing: border-box;
     width:40%;
     padding:4px;
@@ -385,11 +387,11 @@ ul {
 }
 
 li {
-    font-size: 20px;
+    font-size: 18px;
     margin:0 8px;
     display:inline-block;
     z-index: 999;
-    float:right;
+    float:left;
 }
 
 li a {
@@ -448,23 +450,23 @@ li a:hover:after {
     box-shadow: 2px 2px 10px rgba(0,0,0,.5);
     overflow-y:scroll;
     transition-duration: 0.4s;
-    font-size:17px;
+    font-size:18px;
     font-family: Verdana, Geneva, sans-serif;
 }
 
 #map {
-    top:10%;
+    top:6%;
     position: fixed;
-    height:80%;
-    right:8%;
-    width:55%;
+    height:94%;
+    right:0;
+    width:75%;
     text-align:center;
 }
 
 #newmap{
     position: absolute;
-    height:80%;
-    width:80%;
+    height:100%;
+    width:100%;
     top:0;bottom:0;right:0;left:0;
     margin:auto;
     background-color: black;
@@ -475,15 +477,14 @@ li a:hover:after {
 #savecurrentloc{
     display: inline-block;
     background-color: transparent;
-    border:1px solid rgba(60,179,113,1);
-    position: absolute;
+    border:2px solid rgba(60,179,113,1);
+    position: fixed;
     width:20%;
-    height:7%;
+    height:5%;
     color:rgba(60,179,113, 1) ;
-    bottom:0;right:0;left:0;
+    right:1%; top:0.5%;
     margin:auto;
     z-index: 999;
-    text-align: center;
     font-family:'Segoe UI';
     font-size:17px;
     background-size: 300% 200%;
@@ -501,14 +502,14 @@ li a:hover:after {
 }
 
 #nearme{
-    top:0%;
+    top:6%;
     position: absolute;
-    height:90%;
+    height:94%;
     width:25%;
     box-shadow: 2px 2px 10px rgba(0,0,0,.5);
     overflow-y:scroll;
     display:block;
-    font-size:17px;
+    font-size:18px;
     font-family: Verdana, Geneva, sans-serif;
     transition-duration: .4s;
     background-color: rgba(255,255,255,.85);
@@ -522,6 +523,7 @@ li a:hover:after {
     border: solid rgba(255,255,255,1) 3px;
     margin: 13px;
     box-shadow: 2px 2px 5px rgba(0,0,0,.5);
+    font-family: 'Segoe UI'
 }
 
 #sbucksnearme{
