--- a/views/style.css
+++ b/views/style.css
@@ -235,7 +235,7 @@ form {
     height: 6%;
     padding:5px;
     transition-property: background,box-shadow;
-    transition-duration: 0.3s;
+    transition-duration: 0.4s;
     text-align:center;
     background:transparent;
 }
@@ -278,7 +278,12 @@ form {
     transform:translateY(3px);
     border-bottom:none;
 }
-
+#edit:active {
+    -ms-transform:translateY(3px);
+    -webkit-transform:translateY(3px);
+    transform:translateY(3px);
+    border-bottom:none;
+}
 
 #loginbox1{
     height:40%;
@@ -376,15 +381,15 @@ form {
 
 
 ul {
+    position: absolute;
     font-size: 0;
-    float: left;
     box-sizing: border-box;
     width:40%;
     padding:4px;
     list-style: none;
     text-align: center;
     z-index: 999;
-    margin:0;
+    margin:auto;
 }
 
 
@@ -442,7 +447,7 @@ li a:hover:after {
 }
 
 #savedloc{
-    top:6%;
+    top:7%;
     left:0px;
     position: absolute;
     height:0%;
@@ -457,9 +462,9 @@ li a:hover:after {
 }
 
 #map {
-    top:6%;
+    top:7%;
     position: fixed;
-    height:94%;
+    height:93%;
     right:0;
     width:75%;
     text-align:center;
@@ -480,11 +485,11 @@ li a:hover:after {
     display: inline-block;
     background-color: transparent;
     border:2px solid rgba(60,179,113,1);
-    position: fixed;
-    width:20%;
-    height:5%;
+    position: absolute;
+    width:15%;
+    height:80%;
     color:rgba(60,179,113, 1) ;
-    right:1%; top:0.5%;
+    right:3%;top:50%;bottom:50%;
     margin:auto;
     z-index: 999;
     font-family:'Segoe UI';
@@ -504,15 +509,14 @@ li a:hover:after {
 }
 
 #nearme{
-    top:6%;
+    top:7%;
     position: absolute;
-    height:94%;
+    height:93%;
     width:25%;
     box-shadow: 2px 2px 10px rgba(0,0,0,.5);
     overflow-y:scroll;
     display:block;
     font-size:18px;
-    font-family: Verdana, Geneva, sans-serif;
     transition-duration: .4s;
     background-color: rgba(255,255,255,.85);
     z-index: 999;
