fixed side bar scale & added user email line

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -33,6 +33,8 @@
             <form action='/home' method='post'>
                 <input class='inputs' type="text" name="NewUser" id='newuser' placeholder="enter desired username">
                 <br><br>
+                <input class='inputs' type="text" name="UserEmail" id='useremail' placeholder="enter your email">
+                <br><br>
                 <input class='inputs' type="password" name="NewPassword" id='newpw' placeholder="enter password">
                 <br><br>
                 <input class='inputs' type="password" name="confirmp" id='confirmpw' placeholder="confirm password">
