--- a/views/style.css
+++ b/views/style.css
@@ -152,7 +152,7 @@ form {
 #login:hover, #submitbutton:hover{
     background-color: #3e8e41;
     color: white;
-    transition-duration: .4s;
+    transition-duration: .3s;
     transition-delay: 0s;
     cursor:pointer;
 }
@@ -235,7 +235,7 @@ form {
     height: 6%;
     padding:5px;
     transition-property: background,box-shadow;
-    transition-duration: 0.3s;
+    transition-duration: 0.4s;
     text-align:center;
     background:transparent;
 }
@@ -273,6 +273,12 @@ form {
 }
 
 #go:active {
+    -ms-transform:translateY(3px);
+    -webkit-transform:translateY(3px);
+    transform:translateY(3px);
+    border-bottom:none;
+}
+#edit:active {
     -ms-transform:translateY(3px);
     -webkit-transform:translateY(3px);
     transform:translateY(3px);
@@ -335,7 +341,7 @@ form {
     display: none;
 }
 
-#newuser, #newpw, #confirmpw{
+#newuser, #useremail, #newpw, #confirmpw{
     position: relative;
     width: 80%;
     font-size: 100%;
@@ -343,7 +349,7 @@ form {
     border: 0;
     padding: 0;
     background-color: transparent;
-    line-height: 2rem;
+    line-height: 18px;
     border-bottom: 1px solid green;
     color: #777;
     outline: none;
@@ -376,6 +382,7 @@ form {
 
 
 ul {
+    position: absolute;
     font-size: 0;
     float: left;
     box-sizing: border-box;
@@ -384,7 +391,7 @@ ul {
     list-style: none;
     text-align: center;
     z-index: 999;
-    margin:0;
+    margin:auto;
 }
 
 
@@ -442,7 +449,7 @@ li a:hover:after {
 }
 
 #savedloc{
-    top:6%;
+    top:7%;
     left:0px;
     position: absolute;
     height:0%;
@@ -457,9 +464,9 @@ li a:hover:after {
 }
 
 #map {
-    top:6%;
+    top:7%;
     position: fixed;
-    height:94%;
+    height:93%;
     right:0;
     width:75%;
     text-align:center;
@@ -480,11 +487,11 @@ li a:hover:after {
     display: inline-block;
     background-color: transparent;
     border:2px solid rgba(60,179,113,1);
-    position: fixed;
-    width:20%;
-    height:5%;
+    position: absolute;
+    width:15%;
+    height:80%;
     color:rgba(60,179,113, 1) ;
-    right:1%; top:0.5%;
+    right:3%;top:50%;bottom:50%;
     margin:auto;
     z-index: 999;
     font-family:'Segoe UI';
@@ -504,15 +511,14 @@ li a:hover:after {
 }
 
 #nearme{
-    top:6%;
+    top:7%;
     position: absolute;
-    height:94%;
+    height:93%;
     width:25%;
     box-shadow: 2px 2px 10px rgba(0,0,0,.5);
     overflow-y:scroll;
     display:block;
     font-size:18px;
-    font-family: Verdana, Geneva, sans-serif;
     transition-duration: .4s;
     background-color: rgba(255,255,255,.85);
     z-index: 999;
@@ -525,7 +531,7 @@ li a:hover:after {
     border: solid rgba(255,255,255,1) 3px;
     margin: 13px;
     box-shadow: 2px 2px 5px rgba(0,0,0,.5);
-    font-family: 'Segoe UI'
+    font-family: 'Segoe UI';
 }
 
 #sbucksnearme{
@@ -534,4 +540,8 @@ li a:hover:after {
     right:0px;
 }
 
+a {
+    color:#00704a;
+    font-size:18px;
 
+}
