--- a/views/style.css
+++ b/views/style.css
@@ -548,3 +548,80 @@ a {
 .delButton {
     display:none;
 }
+
+
+
+
+label {
+    margin: 0; padding: 0;
+    text-align: center;
+}
+
+fieldset{
+    position: absolute;
+    width:auto;
+    height:30%;
+    top:50%;bottom:50%;
+    left:25%;
+    margin:auto;
+    background-color:transparent;
+}
+
+h3 , #send {
+    width:100%;
+    background-color: green;
+    color:white;
+    margin:0; padding:0;
+    font-family: "Segoe UI";
+    font-weight: lighter;
+}
+
+#footer {
+    position: absolute;
+    width:80%;
+    height:50%;
+    margin:0;
+    bottom:0;
+}
+
+#comment {
+    width:100%;
+    height:30%;
+    bottom:0;
+}
+
+.rating {
+  border: none;
+  float: left;
+  z-index: 9999;
+  background-color:white;
+  display:block;
+}
+
+.rating > input {
+    display: none;
+}
+
+.rating > label:before {
+  margin: 5px;
+  font-size: 1.25em;
+  font-family: FontAwesome;
+  display: inline-block;
+  content: "\f005";
+}
+
+
+.rating > label {
+  color: #ddd;
+  float:right;
+}
+
+
+.rating > input:checked ~ label, /* show gold star when clicked */
+.rating:not(:checked) > label:hover, /* hover current star */
+.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
+
+.rating > input:checked + label:hover, /* hover current star when changing rating */
+.rating > input:checked ~ label:hover,
+.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
