added rating form in the favdata page & fixed style in savedloc and nearme

--- a/views/index2.hbs
+++ b/views/index2.hbs
@@ -23,16 +23,21 @@
         <input type='submit' onclick="savelocation()" value="Save to Favorites" id='savecurrentloc'>
     </div>
     <form action="/rating" method="post">
-        <fieldset class="rating">
-                <h3>Rating</h3>
+        <fieldset id="ratingID" class="rating">
+                <div id="ratingHeader">
+                    <h4>Give Us Feedback</h4>
+                </div>
                 <input type="radio" id="star5" name="rating" value="5"/><label class ="full" for="star5"></label>
                 <input type="radio" id="star4" name="rating" value="4"/><label class ="full" for="star4"></label>
                 <input type="radio" id="star3" name="rating" value="3"/><label class ="full" for="star3"></label>
                 <input type="radio" id="star2" name="rating" value="2"/><label class ="full" for="star2"></label>
                 <input type="radio" id="star1" name="rating" value="1"/><label class ="full" for="star1"></label>
-                <div id="footer">
-                <input type="text" name="comment" id="comment"/></br>
-                <input type="submit" value="send" id="send"/>
+                <div id="ratingFooter">
+                <textarea name="comment" cols="20" rows="5"
+                 id="comment"/ placeholder="Your message"></textarea></br>
+                    <div id="sendButton">
+                        <input type="submit" value="Send" id="send"/>
+                    </div>
                 </div>
         </fieldset>
     </form>
@@ -45,13 +50,13 @@
         <div id="searchbox">
             <form action='/loginsearch' method='post'>
                 <input type="submit" value="Search" id='go'>
-                <input type="text" name="search" id="search">
+                <input type="text" name="search" id="search" placeholder="Search City Name">
             </form>
         </div>
         {{{testvar}}}
     </div>
     <div id="savedloc">
-        <div id="searchbox">Saved Locations   <button id="edit" onclick="editMode()">Edit</button></div>
+        <div id="searchbox"><h5>Saved Locations</h5>  <button id="edit" onclick="editMode()">Edit</button></div>
         {{{savedSpots}}}
     </div>
     <!---
