--- a/views/style.css
+++ b/views/style.css
@@ -230,6 +230,7 @@ form {
 
 #searchbox {
     position: relative;
+    display: table;
     background-color: rgba(255,255,255,.85);
     width: 95%;
     height: 6%;
@@ -238,6 +239,7 @@ form {
     transition-duration: 0.4s;
     text-align:center;
     background:transparent;
+
 }
 #search{
     position: absolute;
@@ -248,15 +250,14 @@ form {
     font-family:'Segoe UI';
 }
 
-#go, #edit{
-    height:60%;
+#edit{
     width:20%;
     position: absolute;
-    right:0;
+    right:3%;
     top:10%;
     position: absolute;
     padding:0;
-    margin:5px;
+    margin:0;
     text-shadow: none;
     font-family:'Segoe UI';
     font-weight: normal;
@@ -268,8 +269,32 @@ form {
     margin-bottom:10px;
     transition: 0.5s;
     font-size:17px;
-    background-color: transparent;
+    background-color: white;
     border:1px solid green;
+}
+
+#go {
+    width:20%;
+    position: absolute;
+    right:3%;
+    top:20%;
+    position: absolute;
+    padding:0;
+    margin:0;
+    text-shadow: none;
+    font-family:'Segoe UI';
+    font-weight: normal;
+    display:inline-block;
+    border:none;
+    outline:none;
+    color:green;
+    background-color:#ECECEC;
+    margin-bottom:10px;
+    transition: 0.5s;
+    font-size:17px;
+    background-color: white;
+    border:1px solid green;
+    z-index: 9999;
 }
 
 #go:active {
@@ -277,12 +302,14 @@ form {
     -webkit-transform:translateY(3px);
     transform:translateY(3px);
     border-bottom:none;
+    z-index: 9999;
 }
 #edit:active {
     -ms-transform:translateY(3px);
     -webkit-transform:translateY(3px);
     transform:translateY(3px);
     border-bottom:none;
+    z-index: 9999;
 }
 
 
@@ -453,7 +480,9 @@ li a:hover:after {
     position: absolute;
     height:0%;
     width:25%;
-    background-color: rgba(255,255,255,.85);
+    background-image:url("savedlocBG.jpg");
+    background-size: cover;
+    background-position: center;
     box-shadow: 2px 2px 10px rgba(0,0,0,.5);
     overflow-y:scroll;
     transition-duration: 0.4s;
@@ -519,15 +548,16 @@ li a:hover:after {
     display:block;
     font-size:18px;
     transition-duration: .4s;
-    background-color: rgba(255,255,255,.85);
+    background-image:url("nearmeBG2.jpg");
+    background-size: cover;
+    background-position: center;
     z-index: 999;
 }
-
 .favItems {
     background-color:rgba(255,255,255,0.8);
     border-radius: 5px;
     padding: 5px;
-    border: solid rgba(255,255,255,1) 3px;
+    border: solid rgba(255,255,255,0.85) .5px;
     margin: 13px;
     box-shadow: 2px 2px 5px rgba(0,0,0,.5);
     font-family: 'Segoe UI';
@@ -540,12 +570,23 @@ li a:hover:after {
 }
 
 a {
-    color:#00704a;
-    font-size:18px;
-
+    color:black;
+    font-size:14px;
 }
 
+h5 {
+    color:white;
+    margin:0;
+    font-size: 1em;
+    font-weight: normal;
+    height:60%;
+    width:auto;
+    text-align: center;
+    display:table-cell;
+    vertical-align: middle;
+}
 .delButton {
+
     display:none;
 }
 
@@ -563,31 +604,66 @@ fieldset{
     height:30%;
     top:50%;bottom:50%;
     left:25%;
-    margin:auto;
+    margin:0; padding:0;
     background-color:transparent;
 }
 
-h3 , #send {
-    width:100%;
-    background-color: green;
-    color:white;
-    margin:0; padding:0;
-    font-family: "Segoe UI";
-    font-weight: lighter;
+fieldset .rating {
+    display: none;
 }
 
-#footer {
+#ratingHeader {
+    width:100%;
+    height:15%;
+    display:table;
+    background-color: green;
+    color:white;
+    text-align: center;
+}
+
+h4 {
+    display:table-cell;
+    vertical-align: middle;
+    font-size: 14px;
+    font-weight: lighter;
+
+}
+
+
+#sendButton {
+    width:100%;
+    height:15%;
+    display:table;
+    background-color: green;
+    color:white;
+    bottom:0;
+    text-align: center;
+}
+
+#send {
+    font-family: "Segoe UI";
+    width:100%;
+    font-weight: lighter;
+    color:white;
+    border:none;
+    display: table-cell;
+    vertical-align: middle;
+    background-color: transparent;
+}
+
+
+#ratingFooter {
     position: absolute;
-    width:80%;
-    height:50%;
+    width:100%;
+    height:auto;
     margin:0;
     bottom:0;
 }
 
 #comment {
-    width:100%;
-    height:30%;
-    bottom:0;
+    width:9em;
+    height:5em;
+    font-family: "Segoe UI";
 }
 
 .rating {
@@ -595,7 +671,8 @@ h3 , #send {
   float: left;
   z-index: 9999;
   background-color:white;
-  display:block;
+  display:none;
+  position: absolute;
 }
 
 .rating > input {
@@ -625,3 +702,5 @@ h3 , #send {
 .rating > input:checked ~ label:hover,
 .rating > label:hover ~ input:checked ~ label, /* lighten current selection */
 .rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
+
+
