--- a/views/style.css
+++ b/views/style.css
@@ -65,7 +65,8 @@ body{
 
 #loginbox{
     height:80%;
-    width:25%;
+    width:20%;
+    min-width: 250px;
     position: absolute;
     left:0px;
     right:0px;
@@ -230,6 +231,7 @@ form {
 
 #searchbox {
     position: relative;
+    display: table;
     background-color: rgba(255,255,255,.85);
     width: 95%;
     height: 6%;
@@ -238,6 +240,7 @@ form {
     transition-duration: 0.4s;
     text-align:center;
     background:transparent;
+
 }
 #search{
     position: absolute;
@@ -248,41 +251,60 @@ form {
     font-family:'Segoe UI';
 }
 
-#go, #edit{
-    height:60%;
+#edit{
     width:20%;
     position: absolute;
-    right:0;
+    right:3%;
     top:10%;
     position: absolute;
     padding:0;
-    margin:5px;
-    text-shadow: none;
+    margin:0;
+    text-decoration: none;
     font-family:'Segoe UI';
     font-weight: normal;
     display:inline-block;
     border:none;
     outline:none;
-    color:green;
-    background-color:#ECECEC;
-    margin-bottom:10px;
+    background-color:rgba(60,179,113,1);
+    border-bottom:solid 1px rgba(60,179,113,1);
     transition: 0.5s;
     font-size:17px;
-    background-color: transparent;
-    border:1px solid green;
+    color:white;
+}
+
+#go {
+    width:20%;
+    position: absolute;
+    right:3%;
+    top:20%;
+    padding:0;
+    margin:0;
+    text-decoration: : none;
+    font-family:'Segoe UI';
+    font-weight: normal;
+    display:inline-block;
+    border:none;
+    outline:none;
+    color:white;
+    transition: 0.5s;
+    font-size:17px;
+    background-color: rgba(60,179,113,1);
+    border-bottom:solid 1px rgba(60,179,113,1);
+    z-index: 9999;
 }
 
 #go:active {
-    -ms-transform:translateY(3px);
-    -webkit-transform:translateY(3px);
-    transform:translateY(3px);
-    border-bottom:none;
+    -ms-transform:translateY(4px);
+    -webkit-transform:translateY(4px);
+    transform:translateY(4px);
+    z-index: 9999;
 }
+
 #edit:active {
-    -ms-transform:translateY(3px);
-    -webkit-transform:translateY(3px);
-    transform:translateY(3px);
-    border-bottom:none;
+    -ms-transform:translateY(4px);
+    -webkit-transform:translateY(4px);
+    transform:translateY(4px);
+    z-index: 9999;
 }
 
 
@@ -453,7 +475,9 @@ li a:hover:after {
     position: absolute;
     height:0%;
     width:25%;
-    background-color: rgba(255,255,255,.85);
+    background-image:url("savedlocBG.jpg");
+    background-size: cover;
+    background-position: center;
     box-shadow: 2px 2px 10px rgba(0,0,0,.5);
     overflow-y:scroll;
     transition-duration: 0.4s;
@@ -519,15 +543,16 @@ li a:hover:after {
     display:block;
     font-size:18px;
     transition-duration: .4s;
-    background-color: rgba(255,255,255,.85);
+    background-image:url("nearmeBG.jpg");
+    background-size: cover;
+    background-position: center;
     z-index: 999;
 }
-
 .favItems {
     background-color:rgba(255,255,255,0.8);
     border-radius: 5px;
     padding: 5px;
-    border: solid rgba(255,255,255,1) 3px;
+    border: solid rgba(255,255,255,0.85) .5px;
     margin: 13px;
     box-shadow: 2px 2px 5px rgba(0,0,0,.5);
     font-family: 'Segoe UI';
@@ -540,11 +565,137 @@ li a:hover:after {
 }
 
 a {
-    color:#00704a;
-    font-size:18px;
-
+    color:black;
+    font-size:14px;
 }
 
+h5 {
+    color:white;
+    margin:0;
+    font-size: 1em;
+    font-weight: normal;
+    height:60%;
+    width:auto;
+    text-align: center;
+    display:table-cell;
+    vertical-align: middle;
+}
 .delButton {
+
     display:none;
 }
+
+
+
+
+label {
+    margin: 0; padding: 0;
+    text-align: center;
+}
+
+fieldset{
+    position: absolute;
+    width:auto;
+    height:30%;
+    top:50%;bottom:50%;
+    left:25%;
+    margin:0; padding:0;
+    background-color:transparent;
+}
+
+fieldset .rating {
+    display: none;
+}
+
+#ratingHeader {
+    width:100%;
+    height:15%;
+    display:table;
+    background-color: green;
+    color:white;
+    text-align: center;
+}
+
+h4 {
+    display:table-cell;
+    vertical-align: middle;
+    font-size: 14px;
+    font-weight: lighter;
+
+}
+
+
+#sendButton {
+    width:100%;
+    height:15%;
+    display:table;
+    background-color: green;
+    color:white;
+    bottom:0;
+    text-align: center;
+}
+
+#send {
+    font-family: "Segoe UI";
+    width:100%;
+    font-weight: lighter;
+    color:white;
+    border:none;
+    display: table-cell;
+    vertical-align: middle;
+    background-color: transparent;
+}
+
+
+#ratingFooter {
+    position: absolute;
+    width:100%;
+    height:auto;
+    margin:0;
+    bottom:0;
+}
+
+#comment {
+    width:9em;
+    height:5em;
+    font-family: "Segoe UI";
+}
+
+.rating {
+  border: none;
+  float: left;
+  z-index: 9999;
+  background-color:white;
+  display:none;
+  position: absolute;
+}
+
+.rating > input {
+    display: none;
+}
+
+.rating > label:before {
+  margin: 5px;
+  font-size: 1.25em;
+  font-family: FontAwesome;
+  display: inline-block;
+  content: "\f005";
+}
+
+
+.rating > label {
+  color: #ddd;
+  float:right;
+}
+
+
+.rating > input:checked ~ label, /* show gold star when clicked */
+.rating:not(:checked) > label:hover, /* hover current star */
+.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
+
+.rating > input:checked + label:hover, /* hover current star when changing rating */
+.rating > input:checked ~ label:hover,
+.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
+
+
